Dodavanje JWT refresh tokena
